Small modifications in the formatting

--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
 					<div>ODIN</div>
 				</div>
 			</div>
+			<div>
+				<p> Photo by <a href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Halie West</a> on <a href="https://unsplash.com/photos/25xggax4bSA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+			</div>
 		</div>
 		<div class="content">
-			<p class="caution">This is not a real online service! This is just an attempt of mine to learn to create forms as part of The Odin Project curriculum. <p>
-			<p class="caution">Please do not type in your real E-mail address and/or your real password.</p>
+			<div>
+				<p class="caution">This is not a real online service! This is just an attempt of mine to learn to create forms as part of The Odin Project curriculum. <p>
+				<p class="caution">Please do not type in your real E-mail address and/or your real password.</p>
+			</div>
 			<form>
 				<h3>Let's do this!</h3>
 				<div>
 					<label for="first-name">FIRST NAME*</label>
-					<input type="text" id="first-name" name="first-name" placeholder="John" required pattern="[^\W\d]+" title="Name must not contain any numbers"/>
+					<input type="text" id="first-name" name="first-name" placeholder="John" required pattern="[^\W\d]+" title="Should not contain any numbers"/>
 				</div>
 				
 				<div>
 					<label for="last-name">LAST NAME</label>
-					<input type="text" id="last-name" name="last-name" placeholder="Abraham" pattern="[^\W\d]+" title="Name must not contain any numbers"/>
+					<input type="text" id="last-name" name="last-name" placeholder="Abraham" pattern="[^\W\d]+" title="Should not contain any numbers"/>
 				</div>
 				
 				<div>
@@ -54,8 +59,10 @@
 				</div>
 			
 			</form>
-			<button type="submit">Create Account</button>
-			<p>Aleady have an account? <a href="#">Log in</a></p>
+			<div>
+				<button type="submit">Create Account</button>
+				<p>Aleady have an account? <a href="#">Log in</a></p>
+			</div>
 		</div>
 	</div>
 </body>
